objects/Occupancy__c.object
<CustomObject>
    <label>Occupancy</label>
    <nameField>
        <label>Occupancy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Occupancies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Bed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bed</label>
        <referenceTo>Bed__c</referenceTo>
        <relationshipLabel>Occupancies</relationshipLabel>
        <relationshipName>Occupancies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resident__c</fullName>
        <label>Resident</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Occupancies</relationshipLabel>
        <relationshipName>Occupancies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apartment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Apartment/Room</label>
        <referenceTo>Unit__c</referenceTo>
        <relationshipLabel>Occupancies</relationshipLabel>
        <relationshipName>Occupancies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <formula>TEXT(Source_Opportunity__r.Community__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Move_In_Date__c</fullName>
        <label>Move In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transfer_Bed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transfer Bed</label>
        <referenceTo>Bed__c</referenceTo>
        <relationshipLabel>Occupancies (Transfer Bed)</relationshipLabel>
        <relationshipName>Occupancies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count_Primary__c</fullName>
        <formula>if ( Is_Primary__c , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count Primary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_of_Care__c</fullName>
        <label>Level of Care</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Housing_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Move_Out_Date__c</fullName>
        <label>Move Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Move_Out_Reason__c</fullName>
        <label>Move Out Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asked to leave: Behavioral</fullName>
                </value>
                <value>
                    <fullName>Asked to leave: Non-payment</fullName>
                </value>
                <value>
                    <fullName>Care level not available</fullName>
                </value>
                <value>
                    <fullName>Death</fullName>
                </value>
                <value>
                    <fullName>Distance from family</fullName>
                </value>
                <value>
                    <fullName>Not able to afford any longer</fullName>
                </value>
                <value>
                    <fullName>Rehab</fullName>
                </value>
                <value>
                    <fullName>Short-term stay</fullName>
                </value>
                <value>
                    <fullName>Unhappy: Care issues</fullName>
                </value>
                <value>
                    <fullName>Unhappy: Management</fullName>
                </value>
                <value>
                    <fullName>Unhappy: Programming</fullName>
                </value>
                <value>
                    <fullName>Value does not justify price</fullName>
                </value>
                <value>
                    <fullName>Went to Another Community</fullName>
                </value>
                <value>
                    <fullName>Went to Another Watermark Community</fullName>
                </value>
                <value>
                    <fullName>Discharge Home</fullName>
                </value>
                <value>
                    <fullName>Discharge to Hospital</fullName>
                </value>
                <value>
                    <fullName>Discharge to Another SNF</fullName>
                </value>
                <value>
                    <fullName>Discharge to Hospice</fullName>
                </value>
                <value>
                    <fullName>Discharge to Acute Rehab</fullName>
                </value>
                <value>
                    <fullName>Discharge Against Medical Advice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pending_Move_In__c</fullName>
        <formula>If (ISBLANK( Scheduled_Move_In_Date__c ), false,
IF (ISBLANK( Move_In_Date__c ) , true, false)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending Move In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Change_Date__c</fullName>
        <label>Transfer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Occupancy_Status__c</fullName>
        <formula>if (isblank( Move_In_Date__c ), &apos;Pending Move In&apos;,
if (isblank( Move_Out_Date__c ), &apos;Active&apos;, &apos;Move Out&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Occupancy Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Move_Out__c</fullName>
        <formula>IF (ISBLANK( Cancel_Scheduled_Move_Out__c ), false,
IF (Isblank( Move_Out_Date__c ), true, false)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending Move Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Net_Pending_MI_MO__c</fullName>
        <formula>Count_Pending_Move_In__c - Count_Pending_Move_Out_Room__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Pending MI/MO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Transfer_Date__c</fullName>
        <label>Last Transfer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pending_MI_MO_Date__c</fullName>
        <formula>if (ISnull( Cancel_Scheduled_Move_Out__c ),IF ( ISnull( Move_In_Date__c ), Scheduled_Move_In_Date__c , null), Cancel_Scheduled_Move_Out__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending MI/MO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Occupancies</relationshipLabel>
        <relationshipName>Occupancies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transfer_Apartment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transfer Apartment/Room</label>
        <referenceTo>Unit__c</referenceTo>
        <relationshipLabel>Occupancies (Transfer Apartment/Room)</relationshipLabel>
        <relationshipName>Occupancies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Move_In_or_Move_Out__c</fullName>
        <formula>if (ISBLANK(Move_Out_Date__c), &apos;Move In&apos;, &apos;Move Out&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Move In or Move Out</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resident_Account_Id__c</fullName>
        <formula>casesafeid( Resident__r.AccountId )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resident Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Move_In_Date_Display__c</fullName>
        <formula>Move_In_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Move In Date Display</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Count_Pending_Move_In__c</fullName>
        <formula>If ( Pending_Move_In__c &amp;&amp; Primary_Next_Resident_of_Room__c , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending Move Ins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Move_In_Transfer_Date__c</fullName>
        <formula>If (ISBLANK(Last_Change_Date__c ), Scheduled_Move_In_Date__c , Last_Change_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Move In/Transfer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apply_Change_to_Couple__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Change to Couple</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Move_Out_Transfer_Type__c</fullName>
        <label>Move Out / Transfer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Resident</fullName>
                </value>
                <value>
                    <fullName>Second Resident</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Occupancy_Status_Label__c</fullName>
        <formula>IF(OR(ISBLANK(Move_Out_Date__c),ISNULL(Move_Out_Date__c)),
IF(OR(ISBLANK(Cancel_Scheduled_Move_Out__c),ISNULL(Cancel_Scheduled_Move_Out__c)),
IF(OR(ISBLANK(Scheduled_Move_Out_or_Transfer_Date__c),ISNULL(Scheduled_Move_Out_or_Transfer_Date__c))
,&apos;Current Resident&apos;
,&apos;Current Resident - Transfer Scheduled &apos;+ TEXT(Scheduled_Move_Out_or_Transfer_Date__c)
)
,&apos;Current Resident - Move Out Scheduled &apos;+ TEXT(Cancel_Scheduled_Move_Out__c)
)
,&apos;Former Resident - Move Out &apos;+ TEXT(Move_Out_Date__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Occupancy Status Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Move_In_Date__c</fullName>
        <label>Scheduled Move In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transfer_Level_of_Care__c</fullName>
        <label>Transfer Level of Care</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Housing_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Out_of_Sync__c</fullName>
        <formula>if (ISBLANK( Move_Out_Date__c ), false,
if ( Is_Primary__c &amp;&amp; ISBLANK(Source_Opportunity__r.Move_Out_Discharge_Date__c ), true, false)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Out of Sync?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduled_Move_Out_Date__c</fullName>
        <label>Scheduled Move Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancel_Scheduled_Move_Out__c</fullName>
        <label>Cancel Scheduled Move Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancel_Scheduled_Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancel Scheduled Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resident_is_not_a_Prospect__c</fullName>
        <formula>NOT(Resident__r.Prospect__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resident is not a Prospect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduled_Occupancy_Change__c</fullName>
        <formula>IF (ISBLANK( Transfer_Apartment__c ),
IF (ISBLANK( Cancel_Scheduled_Move_Out__c ),
IF (ISBLANK( Move_In_Date__c ), &apos;Move In Scheduled for &apos; + TEXT(Scheduled_Move_In_Date__c ),
If ( Isblank(Move_Out_Date__c), &apos;No Planned Occupancy Changes&apos; , &apos;Prior Resident Moved Out on &apos; + TEXT(Move_Out_Date__c)) )
,
If ( Isblank(Move_Out_Date__c), &apos;Move Out Scheduled for &apos; + TEXT(Cancel_Scheduled_Move_Out__c), &apos;Prior Resident Moved Out on &apos; + TEXT(Move_Out_Date__c)) )
, &apos;Transfer Scheduled for &apos; + TEXT(Last_Change_Date__c) + &apos; to &apos; + Transfer_Apartment__r.Name + &apos; &apos; + TEXT( Transfer_Level_of_Care__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Occupancy Change</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_Pending_Move_Out_Room__c</fullName>
        <formula>If ( Pending_Move_Out__c &amp;&amp; Primary_Current_Occupancy_for_Room__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending Move Outs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Next_Resident_of_Room__c</fullName>
        <formula>IF ( Id = Apartment__r.Next_Primary_Occupancy_Id__c, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Next Resident of Room</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Occ_Room_Same_Opp_Room__c</fullName>
        <formula>if ( isblank(Apartment__c ) || isblank(Source_Opportunity__r.Unit__c ), false,
if ( Apartment__c != Source_Opportunity__r.Unit__c , false, true))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Occ Room Same Opp Room</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pending_Scheduled_Move_In_Date__c</fullName>
        <formula>If (ISnull( Scheduled_Move_In_Date__c ), null ,
IF (ISnull( Move_In_Date__c ) &amp;&amp; ISnull( Move_Out_Date__c ) &amp;&amp; ISnull( Scheduled_Move_Out_or_Transfer_Date__c ) , Scheduled_Move_In_Date__c , null)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending Scheduled Move In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Apartment_Level_of_Care__c</fullName>
        <formula>Apartment__r.Level_of_Care_formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Apartment Level of Care</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_LOC_Different_and_Same_Unit__c</fullName>
        <formula>if (isblank( Apartment__c ), false,
Source_Opportunity__r.LOC_Different_from_Room__c &amp;&amp; Apartment__c = Source_Opportunity__r.Unit__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp LOC Different and Same Unit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Potential_Missing_Move_Out_Date__c</fullName>
        <formula>if (isblank( Resident__c ) || isblank(Apartment__c), false,
if ( ISBLANK( Move_In_Date__c ), false,
if (ISBLANK( Move_Out_Date__c ),
if ( Apartment__r.Current_Occupant_Move_In_Date__c &gt; Move_In_Date__c &amp;&amp; ((Apartment__r.Current_Resident_Occupancy_1__c != Id &amp;&amp; Apartment__r.Current_Resident_Occupancy_2__c != Id) ||
(Apartment__r.Current_Resident_Occupancy_1__c != Id &amp;&amp; Apartment__r.Current_Resident_Occupancy_2__c = null) ||
(Apartment__r.Current_Resident_Occupancy_1__c = null &amp;&amp; Apartment__r.Current_Resident_Occupancy_2__c != Id) )
, true, false), false)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Potential Missing Move Out Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_to_Fire_Occupancy_Trigger__c</fullName>
        <label>Change to Fire Occupancy Trigger</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Room_in_Wrong_Community__c</fullName>
        <formula>if (ISBLANK( Source_Opportunity__c ), false,
(
IF (ISBLANK( Apartment__c ), false, if ( Apartment__r.Community_Id__r.Name != Community__c , true, false))
||
IF (ISBLANK( Transfer_Apartment__c ), false, if ( Transfer_Apartment__r.Community_Id__r.Name != Community__c , true, false))
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selected Room in Wrong Community</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Current_Occupancy_for_Room__c</fullName>
        <formula>IF ( Id = Apartment__r.Primary_Current_Occupancy_Id__c , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Current Occupancy for Room</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Move_Out_or_Scheduled_Move_Out_Date__c</fullName>
        <formula>IF (ISBLANK( Move_Out_Date__c ), Cancel_Scheduled_Move_Out__c , Move_Out_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Move Out or Scheduled Move Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduled_Move_Out_or_Transfer_Date__c</fullName>
        <formula>IF (ISBLANK( Cancel_Scheduled_Move_Out__c), IF(ISBLANK( Transfer_Apartment__c ), null, Last_Change_Date__c ), Cancel_Scheduled_Move_Out__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Move Out or Transfer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Primary_Calculation_Sort_Priority__c</fullName>
        <formula>(if (ISBLANK(Move_Out_or_Scheduled_Move_Out_Date__c), 10000000000 * (if ( Resident__c = Source_Opportunity__r.Primary_Resident__c ,2, 0)),
100000000 * (if ( Resident__c = Source_Opportunity__r.Primary_Resident__c ,2, 0))
) )
+
if (ISBLANK(Move_Out_or_Scheduled_Move_Out_Date__c), 0, (Year(Move_Out_or_Scheduled_Move_Out_Date__c) * 10000) + (Month(Move_Out_or_Scheduled_Move_Out_Date__c) * 100) + Day(Move_Out_or_Scheduled_Move_Out_Date__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Primary Calculation Sort Priority</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scheduled_Move_In_or_Transfer_In_Date__c</fullName>
        <formula>IF(ISBLANK( Transfer_Apartment__c ),
IF (ISBLANK( Scheduled_Move_In_Date__c), null, Scheduled_Move_In_Date__c)
, Last_Change_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Move In or Transfer In Date</label>
        <type>Date</type>
    </fields>
    <recordTypes>
        <fullName>Initial_Occupancy</fullName>
        <active>true</active>
        <label>Initial Occupancy</label>
    </recordTypes>
</CustomObject>